--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -120,13 +120,19 @@
                                             <div class="col mx-3">
                                               <h4 class="card-title text-uppercase text-muted mb-3">New Videos</h4>
                                             </div>
-  
+                                            <div class="col float-end text-primary">
+                                              
+
+                                              <button class="btn float-end btn-danger" *ngIf="AtLeastTwoSelected()" [disabled]="!AtLeastTwoSelected()" data-bs-toggle="modal" data-bs-target="#MAHESHASIGN" >Assign</button>
+
+
+                                            </div>
                                             <!-- <span class="form-check form-check-inline " *ngIf="role == 'Superadmin'" style="margin-left:27px">
                                               <input class="form-check-input" type="checkbox" id="selectAllCheckbox" [(ngModel)]="selectAllChecked" (change)="selectAllVideos()">
                                               <label class="form-check-label" for="selectAllCheckbox">Select All</label>
                                             </span> -->
 
-
+<!-- Testing -->
                                             <!-- <div class="row">
                                               <div class="col-2" style="margin-left: 12px;">
                                                 Select Videos
@@ -151,59 +157,90 @@
                                               </div>
                                               
                                             </div> -->
-                                            
-                                            
-                                            <span class="form-check form-check-inline" *ngIf="role == 'Superadmin'" style="margin-left: 27px">
-                                              <input class="form-check-input" type="checkbox" id="selectAllCheckbox" [(ngModel)]="selectAllChecked" (change)="selectAllVideos()">
-                                              <label class="form-check-label" for="selectAllCheckbox">Select All</label>
-                                            </span>
-                                            
-                                            <div class="col float-end text-primary">
-                                              
-
-                                              <button class="btn float-end btn-danger" *ngIf="AtLeastTwoSelected()" [disabled]="!AtLeastTwoSelected()" data-bs-toggle="modal" data-bs-target="#MAHESHASIGN" >Assign</button>
+                                            <!-- Testing  -->
 
 
+
+
+
+                                            <div class="row">
+                                            
+                                            
+                                              <!-- <div class="col-2">
+                                                <div class="form-group" *ngIf="role == 'Superadmin'" style="margin-left: 27px">
+                                                  <label for="selectNumberDropdown">Select No of Videos:</label>
+                                                    <select class="form-control" id="selectNumberDropdown" [(ngModel)]="selectedNumber" (change)="onSelectNumberChange()">
+                                                      <option  >Select </option> 
+
+                                                    <option value="2">Select 2</option>
+                                                    <option value="all">Select All</option>
+                                                  </select>
+                                                </div>
+                                              </div> -->
                                             </div>
-                                          </div>
-                                          <div class="row ">
+
+                                            
+
+                                            
+                                              <!-- <span class="form-check form-check-inline" *ngIf="role == 'Superadmin'" style="margin-left: 27px">
+                                                <input class="form-check-input" type="checkbox" id="selectAllCheckbox" [(ngModel)]="selectAllChecked" (change)="selectAllVideos()">
+                                                <label class="form-check-label" for="selectAllCheckbox">Select All</label>
+                                            
                                            
-                                            <!-- <select class="form-select" aria-label="Default select example">
+                                            </div>
+                                            <div class="row ">
+                                             
+                                           <select class="form-select" aria-label="Default select example">
                                               <option selected>Open this select menu</option>
                                               <option value="1">One</option>
                                               <option value="2">Two</option>
                                               <option value="3">Three</option>
                                             </select> -->
-                                    
+
+
+                                            
+                                  
                                             <ng-container *ngIf="all_newChefVideos.length > 0; else noNewChefVideosFound">
-                                              <div class="col-3" *ngFor="let video of (showMoreVideosnew ? all_newChefVideos : all_newChefVideos.slice(0, 4)); let i = index">
-                                                <div class="ratio ratio-16x9" (click)="navigateToVideoDetail(video)" id="example1">
+                                              <div class="col-xl-3" *ngFor="let video of (showMoreVideosnew ? all_newChefVideos : all_newChefVideos.slice(0, 4)); let i = index">
+                                                <div class="ratio ratio-16x9" (click)="navigateToVideoDetail(video.id)" id="example1" >
+
+                                                
                                                   <video controls id="example1">
                                                     <source [src]="base_url + video.videoUrl" type="video/mp4">
                                                     Your browser does not support the video tag.
                                                   </video>
                                                 </div>
                                     
-                                                <p class="text-left font-weight-bold fs-5 text-danger" style="margin-left: 13px;">Product Name: <span class="text-black">{{video.text}}</span></p>
+                                                <p class="text-left font-weight-bold fs-7 text-danger" style="margin-left: 13px;">Product Name: <span class="text-black">{{video.text}}</span></p>
                                     
-                                                <p class="text-left font-weight-bold fs-5 text-danger" style="margin-left: 13px;">Veg/Nonveg: <span class="text-black">{{video.productType}}</span>
+                                                <p class="text-left font-weight-bold fs-7 text-danger" style="margin-left: 13px;">Veg/Nonveg: <span class="text-black">{{video.productType}}</span>
                                                   <img *ngIf="video.productType == 'Veg'" src="../../assets/img/veg.png" class="inline-image small-image" alt="{{ video.productType }}" />
                                                   <img *ngIf="video.productType != 'Veg'" src="../../assets/img/non-veg.png" class="inline-image small-image" alt="{{ video.productType }}" />
                                                 </p>
+
+                                                <div class="row">
+                                                  <div class="col">
+                                                    <span class="form-check form-check-inline" *ngIf="role == 'Superadmin'" style="margin-left: 16px;">
+                                                      <input class="form-check-input" type="checkbox" id="inlineCheckbox{{i}}" [(ngModel)]="video.selected" [disabled]="selectAllChecked" (change)="onCheckChangeAssign(video.id)">
+                                                      <label class="form-check-label" for="inlineCheckbox{{i}}">Assign</label>
+                                                    </span>
+                                                  </div>
+
+                                                  <div class="col">
+                                                    
+                                                  </div>
+                                                </div>
                                     
-                                                <span class="form-check form-check-inline" *ngIf="role == 'Superadmin'" style="margin-left: 16px;">
-                                                  <input class="form-check-input" type="checkbox" id="inlineCheckbox{{i}}" [(ngModel)]="video.selected" [disabled]="selectAllChecked" (change)="onCheckChangeAssign(video.id)">
-                                                  <label class="form-check-label" for="inlineCheckbox{{i}}">Assign</label>
-                                                </span>
+                                               
                                     
-                                                <p class="text-left fs-5 font-weight-bold text-danger" style="margin-left: 13px;">Cuisine:<span class="text-black">{{video.nationalCuisine}}</span></p>
+                                                <p class="text-left fs-7 font-weight-bold text-danger" style="margin-left: 13px;">Cuisine:<span class="text-black">{{video.nationalCuisine}}</span></p>
                                                 <div class="form-check form-check-inline" style="margin-left: 13px;">
                                                   <input class="form-check-input" type="radio" name="inlineRadioOptions" (click)="newChefVideosaccept(video.id)" id="q156" value="option1" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                                                  <label class="form-check-label" for="inlineRadio1"><strong class="fs-5">Approve</strong></label>
+                                                  <label class="form-check-label" for="inlineRadio1"><strong class="fs-7">Approve</strong></label>
                                                 </div>
                                                 <div class="form-check form-check-inline">
                                                   <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2" data-bs-toggle="modal" (click)="newChefVideosdelete(video.id)" data-bs-target="#denybutton">
-                                                  <label class="form-check-label" for="inlineRadio2"><strong class="fs-5">Reject</strong></label>
+                                                  <label class="form-check-label" for="inlineRadio2"><strong class="fs-7">Reject</strong></label>
                                                 </div>
 
                                                 
@@ -257,19 +294,19 @@
                         
                                     <div class="row">
                                       <ng-container *ngIf="all_notapproved_videos.length > 0; else noNotApprovedVideosFound">
-                                        <div class="col-3" *ngFor="let video1 of (showMoreVideos ? all_notapproved_videos : all_notapproved_videos.slice(0, 4)); let i = index">
-                                          <div class="ratio ratio-16x9" (click)="navigateToVideoDetail(video1)" id="example1">
+                                        <div class="col-xl-3" *ngFor="let video1 of (showMoreVideos ? all_notapproved_videos : all_notapproved_videos.slice(0, 4)); let i = index">
+                                          <div class="ratio ratio-16x9" (click)="navigateToVideoDetail(video1.id)" id="example1">
                                             <video controls id="example1">
                                               <source [src]="base_url + video1.videoUrl" type="video/mp4">
                                               Your browser does not support the video tag.
                                             </video>
                                           </div>
-                                          <p class="text-left font-weight-bold  fs-5 text-danger" style="margin-left: 13px;">ProductName :{{video1.text}}</p>
-                                          <p class="text-left fs-5 font-weight-bold text-danger"style="margin-left: 13px;">Veg/Nonveg: {{video1.productType}}
+                                          <p class="text-left font-weight-bold  fs-7 text-danger" style="margin-left: 13px;">ProductName : <span class="text-black">{{video1.text}} </span></p>
+                                          <p class="text-left fs-7 font-weight-bold text-danger"style="margin-left: 13px;">Veg/Nonveg: <span class="text-black">{{video1.productType}}</span>
                                             <img *ngIf="video1.productType == 'Veg'" src="../../assets/img/veg.png" class="inline-image small-image" alt="{{ video1.productType }}" />
                                             <img *ngIf="video1.productType != 'Veg'" src="../../assets/img/non-veg.png" class="inline-image small-image" alt="{{ video1.productType }}" />
                                           </p>
-                                          <p class="text-left fs-5 text-danger" style="margin-left: 13px;">Cuisine : {{video1.nationalCuisine}}</p>
+                                          <p class="text-left fs-7 text-danger" style="margin-left: 13px;">Cuisine : <span class="text-black">{{video1.nationalCuisine}}</span></p>
                             
                                         </div>
                                       </ng-container>
@@ -314,19 +351,19 @@
                         
                                     <div class="row">
                                       <ng-container *ngIf="all_deleted_videos.length > 0; else noVideosFound">
-                                        <div class="col-3" *ngFor="let video2 of (showMoreRejectedVideos ? all_deleted_videos : all_deleted_videos.slice(0, 4)); let i = index">
-                                          <div class="ratio ratio-16x9" (click)="navigateToVideoDetail(video2)" id="example1">
+                                        <div class="col-xl-3" *ngFor="let video2 of (showMoreRejectedVideos ? all_deleted_videos : all_deleted_videos.slice(0, 4)); let i = index">
+                                          <div class="ratio ratio-16x9" (click)="navigateToVideoDetail(video2.id)" id="example1">
                                             <video controls id="example1">
                                               <source [src]="base_url + video2.videoUrl" type="video/mp4">
                                               Your browser does not support the video tag.
                                             </video>
                                           </div>
-                                          <p class="text-left fs-5 font-weight-bold text-danger" style="margin-left: 13px;">ProductName :<span class="text-black">{{video2.text}}</span></p>
-                                          <p class="text-left fs-5 font-weight-bold text-danger" style="margin-left: 13px;">Veg/Nonveg: <span class="text-black">{{ video2.productType }}</span>
+                                          <p class="text-left fs-7 font-weight-bold text-danger" style="margin-left: 13px;">ProductName :<span class="text-black">{{video2.text}}{{video2.id}}</span></p>
+                                          <p class="text-left fs-7 font-weight-bold text-danger" style="margin-left: 13px;">Veg/Nonveg: <span class="text-black">{{ video2.productType }}</span>
                                             <img *ngIf="video2.productType == 'Veg'" src="../../assets/img/veg.png" class="inline-image small-image" alt="{{ video2.productType }}" />
                                             <img *ngIf="video2.productType != 'Veg'" src="../../assets/img/non-veg.png" class="inline-image small-image" alt="{{ video2.productType }}" />
                                           </p>
-                                          <p class="text-left fs-5 font-weight-bold text-danger" style="margin-left: 13px;">Cuisine : <span class="text-black">{{video2.nationalCuisine}}</span></p>
+                                          <p class="text-left fs-7 font-weight-bold text-danger" style="margin-left: 13px;">Cuisine : <span class="text-black">{{video2.nationalCuisine}}</span></p>
                              
                                         </div>
                                       </ng-container>
