videos all page

--- a/src/app/authentication/reset-password/reset-password.component.html
+++ b/src/app/authentication/reset-password/reset-password.component.html
@@ -16,7 +16,22 @@
     .form-gap {
         padding-top: 170px;
     }
-   
+   .sider{
+    border: 1px solid #ced4da;
+    padding: 14px;
+}
+   .fa-eye,
+.fa-eye-slash {
+  font-size: 16px; /* Adjust the size as needed */
+}
+
+.hi{
+    background: #A51C05;
+    color: white;
+  }
+  .colour{
+    color: #A51C05;
+  }
 </style>
 
  <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -38,42 +53,43 @@
                         <div class="card-body">
 
                             <div class="text-center">
-                                <div class="row justify-content-center">
-                                    <div class="col-3 align-items-center">
-                                        <h3><i class="fa fa-lock fa-4x "></i></h3>
+                                <div class="row  ">
+                                    <div class="col-12">
+                                        <h3 class=" mx-auto d-block text-center"><i class="fa fa-lock fa-4x "></i></h3>
                                     </div>
                                 </div>
-                                <h2 class="text-center">Reset Password?</h2>
+                                <h1 class="text-center colour fw-bold">Reset Password?</h1>
                                 <p>You can reset your password here.</p>
                                 <div class="panel-body">
                                     <form id="register-form" role="form" autocomplete="off" class="form" #resetForm="ngForm" (ngSubmit)="onTapSubmit(resetForm)">
         
+
+
         
         
-        
-                                        <div class="form-group mt-2">
+                                        <div class="form-group mt-3">
                                             <div class="input-group">
                                                 <input id="oldPassword" name="oldPassword" placeholder="Old password" class="form-control" [(ngModel)]="model.oldPassword" [type]="oldPasswordType" required>
-                                                <span class="input-group-addon" (click)="toggleOldPasswordVisibility()">
+                                                <span class="input-group-addon sider"  (click)="toggleOldPasswordVisibility()">
                                                     <i class="fa icos" [ngClass]="{'fa-eye': showOldPassword, 'fa-eye-slash': !showOldPassword}"></i>
                                                 </span>
                                             </div>
                                         </div>
         
         
-                                        <div class="form-group mt-2">
+                                        <div class="form-group mt-3">
                                             <div class="input-group">
                                                 <input id="newPassword" name="newPassword" placeholder="New password" class="form-control" [(ngModel)]="model.newPassword" [type]="passwordType" required>
-                                                <span class="input-group-addon" (click)="togglePasswordVisibility()">
-                                                    <i class="fa" [ngClass]="{'fa-eye': showPassword, 'fa-eye-slash': !showPassword}"></i>
+                                                <span class="input-group-addon sider" (click)="togglePasswordVisibility()">
+                                                    <i class="fa icos" [ngClass]="{'fa-eye': showPassword, 'fa-eye-slash': !showPassword}"></i>
                                                 </span>
                                             </div>
                                         </div>
-                                        <div class="form-group mt-2">
+                                        <div class="form-group mt-3">
                                             <div class="input-group">
                                                 <input id="confirmPassword" name="confirmPassword" placeholder="Confirm Password" class="form-control" [(ngModel)]="model.confirmPassword" [type]="confirmPasswordType" required>
-                                                <span class="input-group-addon" (click)="toggleConfirmPasswordVisibility()">
-                                                    <i class="fa" [ngClass]="{'fa-eye': showConfirmPassword, 'fa-eye-slash': !showConfirmPassword}"></i>
+                                                <span class="input-group-addon sider" (click)="toggleConfirmPasswordVisibility()">
+                                                    <i class="fa icos" [ngClass]="{'fa-eye': showConfirmPassword, 'fa-eye-slash': !showConfirmPassword}"></i>
                                                 </span>
                                             </div>
                                         </div>
@@ -81,8 +97,8 @@
                                             Passwords do not match.
                                         </div>
                                         
-                                        <div class="form-group">
-                                            <input name="recover-submit" class=" mt-2 btn btn-lg btn-primary btn-block" value="Reset Password" type="submit"  [disabled]="resetForm.invalid">
+                                        <div class="form-group mt-4 mb-4">
+                                            <input name="recover-submit" class=" mt-2 btn btn-lg hi btn-block" value="Reset Password" type="submit"  [disabled]="resetForm.invalid">
                                         </div>
                                         <input type="hidden" class="hide" name="token" id="token" value="">
                                     </form>
