--- a/src/app/common_widgets/adminheader/adminheader.component.html
+++ b/src/app/common_widgets/adminheader/adminheader.component.html
@@ -54,7 +54,7 @@
   
   
   
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown pe-3">
   
           <a class="nav-link nav-icon" data-bs-toggle="dropdown">
             <i class="ph-bell-simple" style="color: rgb(174, 0, 0);"></i>
@@ -62,7 +62,7 @@
           </a>
 
   
-        </li>
+        </li> -->
   
         <!-- End Notification Nav -->
         
