--- a/src/app/common_widgets/leftnav/leftnav.component.html
+++ b/src/app/common_widgets/leftnav/leftnav.component.html
@@ -170,11 +170,11 @@
       <li class="nav-item fin_nav-item" (click)="manageTeam()">
         <a class="nav-link fin_nav-link new" aria-current="page" routerLink="/manageteam" routerLinkActive="active">
           <i class="ph ph-user nav-img "></i>
-          Manage Leads</a>
+          Manage Team</a>
       </li>
       <li class="nav-item fin_nav-item" (click)="TemplatesComponent()">
         <a class="nav-link fin_nav-link" aria-current="page" routerLink="/template" routerLinkActive="active">
-          <i class="ph ph-bank nav-img"></i>
+          <i class="ph ph-note-pencil nav-img"></i>
           Create Template</a>
       </li>
 
@@ -184,14 +184,14 @@
 
       <li class="nav-item fin_nav-item" (click)="manageTemplatesComponent()">
         <a class="nav-link fin_nav-link" aria-current="page" routerLink="/template_list" routerLinkActive="active">
-          <i class="ph ph-bank nav-img"></i>
+          <i class="ph ph-folder-star nav-img"></i>
           Manage Template</a>
       </li>
 
 
       <li class="nav-item fin_nav-item" (click)="VideosComponent()">
         <a class="nav-link fin_nav-link" aria-current="page" routerLink="/VideosComponent" routerLinkActive="active">
-          <i class="ph ph-bank nav-img"></i>
+          <i class="ph ph-film-slate nav-img"></i>
           Video Verification</a>
       </li>
 
